--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "accessibilitytool",
+	"name": "@paer/accessibilitytool",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -44,5 +44,63 @@
 	},
 	"keywords": [
 		"svelte"
-	]
+	],
+	"description": "tool paer",
+	"main": "./dist/index.js",
+	"dependencies": {
+		"@paer/accessibilitytool": "^0.0.1",
+		"acorn": "^8.14.1",
+		"aria-query": "^5.3.2",
+		"axobject-query": "^4.1.0",
+		"chokidar": "^4.0.3",
+		"clsx": "^2.1.1",
+		"cookie": "^0.6.0",
+		"debug": "^4.4.1",
+		"dedent-js": "^1.0.1",
+		"deepmerge": "^4.3.1",
+		"devalue": "^5.1.1",
+		"esbuild": "^0.25.4",
+		"esm-env": "^1.2.2",
+		"esrap": "^1.4.6",
+		"fdir": "^6.4.4",
+		"fsevents": "^2.3.3",
+		"is-reference": "^3.0.3",
+		"kleur": "^4.1.5",
+		"locate-character": "^3.0.0",
+		"lower-case": "^2.0.2",
+		"magic-string": "^0.30.17",
+		"mri": "^1.2.0",
+		"mrmime": "^2.0.1",
+		"ms": "^2.1.3",
+		"nanoid": "^3.3.11",
+		"no-case": "^3.0.4",
+		"package-manager-detector": "^1.3.0",
+		"pascal-case": "^3.1.2",
+		"picocolors": "^1.1.1",
+		"picomatch": "^4.0.2",
+		"postcss": "^8.5.3",
+		"readdirp": "^4.1.2",
+		"rollup": "^4.41.0",
+		"sade": "^1.8.1",
+		"semver": "^7.7.2",
+		"set-cookie-parser": "^2.7.1",
+		"sirv": "^3.0.1",
+		"source-map-js": "^1.2.1",
+		"svelte2tsx": "^0.7.39",
+		"tinyglobby": "^0.2.13",
+		"totalist": "^3.0.1",
+		"tslib": "^2.8.1",
+		"vitefu": "^1.0.6",
+		"zimmerframe": "^1.1.2"
+	},
+	"author": "paer",
+	"license": "ISC",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Paer-Studio/Accessibilitytool.git"
+	},
+	"bugs": {
+		"url": "https://github.com/Paer-Studio/Accessibilitytool/issues"
+	},
+	"homepage": "https://github.com/Paer-Studio/Accessibilitytool#readme"
 }
